--- a/client/src/views/Product/product.scss
+++ b/client/src/views/Product/product.scss
@@ -11,8 +11,9 @@
     box-shadow: 0 2px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
     button {
-      margin-top: 50px;
+      margin-top: 3em;
     }
+
     .product-image {
       width: 50%;
       img {
@@ -37,13 +38,14 @@
 
     .product-description {
       width: 50%;
+      height: 100%;
       h1 {
         margin: 50px auto auto;
       }
 
       .product-price {
         font-weight: bold;
-        margin-top: 70px;
+        margin-top: 2em;
         color: #B22D10;
         font-size: 16px;
 
