--- a/client/src/components/SideBar/sidebar.scss
+++ b/client/src/components/SideBar/sidebar.scss
@@ -1,10 +1,7 @@
 .sidebar {
-  background: #fff;
-  color: teal;
-  text-align: center;
-  overflow: hidden;
-  height: auto;
-  width: 600px;
-  margin-top: 30px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  display: block;
+  left: 0;
+  position: relative;
+  width: 15%;
+  float: left;
 }
