--- a/client/src/views/ShoppingCart/shoppingcart.scss
+++ b/client/src/views/ShoppingCart/shoppingcart.scss
@@ -5,7 +5,8 @@
 
   .cart-container {
     height: 65%;
-    width: 75%;
+    width: 95%;
+    max-width: 1258px;
     margin: 10px auto auto;
     display: flex;
     flex-direction: column;
